--- a/micro-service/.github/workflows/main.yml
+++ b/micro-service/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "dab8106" --password-stdin
-        docker image build -t dab8106/pyflask:latest .
-        docker push dab8106/pyflask:latest
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "abhinav7777" --password-stdin
+        docker image build -t abhinav7777/dockerassignment:latest .
+        docker push abhinav7777/dockerassignment:latest
